<resources>
    <string name="app_name">My Application</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="user_name">user name</string>
    <string name="repassword">RePassword</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>